<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".jiosavvanSignupPage">

    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dont"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:textSize="15dp"
        />
    <Button
        android:id="@+id/Signup"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="Sign Up"
        android:layout_marginLeft="250dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/black"
        />
    <TextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:layout_below="@+id/text"
        android:textSize="30dp"
        android:layout_marginTop="30dp"
        android:textAlignment="center"
        android:layout_marginLeft="24dp"
        android:textStyle="bold"
        />
    <TextView
        android:id="@+id/Log"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Log"
        android:layout_below="@+id/welcome"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        />
    <EditText
        android:id="@+id/buttton2"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:background="@drawable/buttonshape"
        android:layout_below="@+id/Log"
        android:layout_marginTop="20dp"
        android:textColorHint="@color/black"
        android:padding="10dp"
        android:backgroundTint="@color/normalwhite"
        android:textColor="@color/black"
        android:hint="Email Address"
        android:layout_marginLeft="30dp"
        />
    <EditText
        android:id="@+id/buttton3"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:background="@drawable/buttonshape"
        android:layout_below="@+id/buttton2"
        android:layout_marginTop="20dp"
        android:textColorHint="@color/black"
        android:padding="10dp"
        android:textColor="@color/black"
        android:backgroundTint="@color/normalwhite"
        android:hint="Username"
        android:layout_marginLeft="30dp"
        />    <Button
        android:id="@+id/buttton4"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="Continue"
        android:textColor="@color/black"
        android:layout_below="@+id/buttton3"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="30dp"
        android:backgroundTint="@color/sky"

        />
    <TextView
        android:id="@+id/forget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/buttton4"
        android:text="Forgot password?"
        android:textSize="20dp"
        android:layout_marginLeft="29dp"
        android:textColor="@color/sky"
        android:layout_marginTop="20dp"
        />
    <TextView
        android:id="@+id/By"
        android:layout_width="390dp"
        android:layout_height="wrap_content"
android:layout_marginTop="30dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_below="@+id/forget"
        android:textStyle="italic"
        android:text="By selecting 'Continue',you agree to jiosaavn's terms of Service and Privacy Policy."
        />
    <View
        android:id="@+id/vie"
        android:layout_width="80dp"
        android:layout_below="@+id/By"
        android:layout_marginTop="40dp"
        android:background="@color/black"
        android:layout_marginLeft="30dp"
        android:layout_height="1dp"/>
    <TextView
        android:id="@+id/or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="OR CONNECT WITH"
        android:textColor="@color/black"
        android:textStyle="italic"
        android:layout_below="@+id/vie"
        android:layout_marginTop="-12dp"
        android:textSize="15dp"
        android:layout_marginLeft="122dp"

        />
    <View
        android:id="@+id/view"
        android:layout_width="80dp"
        android:layout_below="@+id/By"
        android:layout_marginTop="40dp"
        android:background="@color/black"
        android:layout_marginLeft="240dp"
        android:layout_height="1dp"/>

    <Button
        android:id="@+id/Mobile"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view"
        android:text="Mobile Number"
        android:backgroundTint="@color/black"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="30dp"
        />
    <Button
        android:id="@+id/facebook"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view"
        android:text="Google"
        android:backgroundTint="@color/blue"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="190dp"
        />
    <TextView
        android:id="@+id/Jio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Jio saavn ?"
        android:layout_below="@+id/facebook"
        android:textAlignment="center"
        android:textStyle="italic"
        android:layout_marginTop="20dp"
        android:textSize="40dp"
        android:textColor="@color/sky"
        android:layout_marginLeft="90dp"
        />

</RelativeLayout>